Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_MCLTD__c.field-meta.xml
<CustomField>
    <fullName>IP_MCLTD__c</fullName>
    <formula>IF( IP_LTDCount__c &gt; 0 ,
IF( IP_LCC__c, &quot;&quot;, &quot;LCC, &quot;) &amp; 
IF( Declaration_Completed__c , &quot;&quot;, &quot;Declaration, &quot;) &amp; 
IF( PORTW_Completed__c , &quot;&quot;, &quot;PORTW, &quot;) &amp; 
IF( Medical_Completed__c, &quot;&quot;, &quot;Medical, &quot;)
,&quot;&quot;)</formula>
    <label>Missing Compliance Detail LTD</label>
    <type>Text</type>
</CustomField>