Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_MCPAYE__c.field-meta.xml
<CustomField>
    <fullName>IP_MCPAYE__c</fullName>
    <formula>IF( IP_ActivePAYEPayProfiles__c &gt; 0,
IF( Declaration_Completed__c , &quot;&quot;, &quot;Declaration,&quot;) &amp; 
IF( PORTW_Completed__c, &quot;&quot;, &quot;PORTW,&quot;) &amp; 
IF( TOE_Completed__c, &quot;&quot;, &quot;TOE,&quot;)&amp; 
IF( Medical_Completed__c, &quot;&quot;, &quot;Medical,&quot;) &amp; 
IF( New_Starter_Form__c , &quot;&quot;, &quot;New Starter Form ,&quot;)&amp; 
IF( Equal_Opportunity_Completed__c , &quot;&quot;, &quot;Equal Opportunity&quot;), &quot;&quot;)</formula>
    <label>Missing Compliance Detail PAYE</label>
    <type>Text</type>
</CustomField>