Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_MCPermWork__c.field-meta.xml
<CustomField>
    <fullName>IP_MCPermWork__c</fullName>
    <formula>IF( Perm_Work__c ,
IF( PORTW_Completed__c, &quot;&quot;, &quot;PORTW, &quot;) &amp; 
IF( Equal_Opportunity_Completed__c , &quot;&quot;, &quot;Equal Opportunity, &quot;) &amp;
IF( IP_PermDisclaimer__c , &quot;&quot;, &quot;Perm Disclaimer.&quot;),&quot;&quot;)</formula>
    <label>Missing Compliance PermWork</label>
    <type>Text</type>
</CustomField>