Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_MCUmb__c.field-meta.xml
<CustomField>
    <fullName>IP_MCUmb__c</fullName>
    <formula>IF( IP_UmbCount__c &gt; 0,IF( PORTW_Completed__c , &quot;&quot;, &quot;PORTW.&quot;), &quot;&quot;)</formula>
    <label>Missing Compliance Umbrella</label>
    <type>Text</type>
</CustomField>