Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Medical_History__c.field-meta.xml
<CustomField>
    <fullName>IP_Medical_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical History</label>
    <type>Checkbox</type>
</CustomField>