Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Minimum_Pay_Rate_PAYE__c.field-meta.xml
<CustomField>
    <fullName>IP_Minimum_Pay_Rate_PAYE__c</fullName>
    <label>Minimum Pay Rate (PAYE)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>