Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_MissingCompliaceDetailFromWorkflow__c.field-meta.xml
<CustomField>
    <fullName>IP_MissingCompliaceDetailFromWorkflow__c</fullName>
    <label>MissingCompliaceDetailFromWorkflow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>