Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_MondayPayrollDate__c.field-meta.xml
<CustomField>
    <fullName>IP_MondayPayrollDate__c</fullName>
    <label>Monday Payroll Date</label>
    <type>Date</type>
</CustomField>