Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Nationality__c.field-meta.xml
<CustomField>
    <fullName>IP_Nationality__c</fullName>
    <label>Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>