Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_NewStartTaxStatus__c.field-meta.xml
<CustomField>
    <fullName>IP_NewStartTaxStatus__c</fullName>
    <description>New start tax status</description>
    <inlineHelpText>New Start Tax Status provided when the candidate complete a new starter form</inlineHelpText>
    <label>New Start Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>