Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_NextOfKinInfo__c.field-meta.xml
<CustomField>
    <fullName>IP_NextOfKinInfo__c</fullName>
    <description>record next of kin information here</description>
    <inlineHelpText>Name and contact number of next of kin.</inlineHelpText>
    <label>Next of Kin Info</label>
    <type>TextArea</type>
</CustomField>