Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Offence__c.field-meta.xml
<CustomField>
    <fullName>IP_Offence__c</fullName>
    <label>Offence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>