Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_OutstandingReferences__c.field-meta.xml
<CustomField>
    <fullName>IP_OutstandingReferences__c</fullName>
    <formula>IF (AND(IP_Reference_count__c = IP_CompleteReferences__c, IP_Reference_count__c &gt;0),FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding references</label>
    <type>Checkbox</type>
</CustomField>