Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Pass2ndTierToTempest__c.field-meta.xml
<CustomField>
    <fullName>IP_Pass2ndTierToTempest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass 2nd tier to Tempest</label>
    <type>Checkbox</type>
</CustomField>