Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_PAYECount__c.field-meta.xml
<CustomField>
    <fullName>IP_PAYECount__c</fullName>
    <label>PAYE pay profile count</label>
    <summaryFilterItems>
        <field>IP_PayProfile__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>PAYE</value>
    </summaryFilterItems>
    <summaryForeignKey>IP_PayProfile__c.IP_Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>