Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_PayFrequency__c.field-meta.xml
<CustomField>
    <fullName>IP_PayFrequency__c</fullName>
    <defaultValue>1</defaultValue>
    <label>IP PayFrequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>