Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_PayrollStatus__c.field-meta.xml
<CustomField>
    <fullName>IP_PayrollStatus__c</fullName>
    <formula>IF(IP_MissingPayrollDetail__c = &quot;Incomplete active pay profiles, &quot;,
   (IMAGE(&quot;/resource/Images/IncompleteActivePayProfilesAmber.png&quot;, &quot;Incomplete active Pay Profiles&quot;)),
   IF( NOT( ISBLANK( IP_MissingPayrollDetail__c ) ) , 
      (IMAGE(&quot;/resource/Images/PayrollDetailNotCompleteRed.png&quot;, &quot;Payroll detail not complete&quot;)),
	  (IMAGE(&quot;/resource/Images/PayrollDetailCompleteGreen.png&quot;, &quot;Payroll detail complete&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Graphic</label>
    <type>Text</type>
</CustomField>