Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_PermDisclaimer__c.field-meta.xml
<CustomField>
    <fullName>IP_PermDisclaimer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perm Disclaimer (Perm Only)</label>
    <type>Checkbox</type>
</CustomField>