Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_PermID__c.field-meta.xml
<CustomField>
    <fullName>IP_PermID__c</fullName>
    <displayFormat>PC-{0000000}</displayFormat>
    <label>Perm ID</label>
    <type>AutoNumber</type>
</CustomField>