Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Phone__c.field-meta.xml
<CustomField>
    <fullName>IP_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone</label>
    <type>Checkbox</type>
</CustomField>