Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_PORTWStartDate__c.field-meta.xml
<CustomField>
    <fullName>IP_PORTWStartDate__c</fullName>
    <label>PORTW Start Date</label>
    <type>Date</type>
</CustomField>