Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Post__c.field-meta.xml
<CustomField>
    <fullName>IP_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post</label>
    <type>Checkbox</type>
</CustomField>