Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_POTRWCertCount__c.field-meta.xml
<CustomField>
    <fullName>IP_POTRWCertCount__c</fullName>
    <label>PORTW Cert Count</label>
    <summaryFilterItems>
        <field>ts2__Certification__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Right to Work</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ts2__Certification__c.IP_Status__c</field>
        <operation>equals</operation>
        <value>Current</value>
    </summaryFilterItems>
    <summaryForeignKey>ts2__Certification__c.ts2__Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>