Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_PreferredLocation__c.field-meta.xml
<CustomField>
    <fullName>IP_PreferredLocation__c</fullName>
    <label>Preferred Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>