Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_PreferredMethodOfContact__c.field-meta.xml
<CustomField>
    <fullName>IP_PreferredMethodOfContact__c</fullName>
    <description>How would the person prefer to be communicated with</description>
    <label>Preferred Method of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IP_PreferredMethodOfContact</valueSetName>
    </valueSet>
</CustomField>