Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_PresentedP45ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>IP_PresentedP45ReasonCode__c</fullName>
    <formula>RIGHT(TEXT( Reason_for_P45__c ), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presented p45 reason code</label>
    <type>Text</type>
</CustomField>