Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_PrimaryPayMethod__c.field-meta.xml
<CustomField>
    <fullName>IP_PrimaryPayMethod__c</fullName>
    <description>count field to verify that there is &lt;=1 primary pay method for the worker</description>
    <label>Primary Pay Method</label>
    <summaryFilterItems>
        <field>IP_PayProfile__c.IP_PrimaryPayMethod__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>IP_PayProfile__c.IP_Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>