Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_ReasonForRegistration__c.field-meta.xml
<CustomField>
    <fullName>IP_ReasonForRegistration__c</fullName>
    <description>record the reason the candidate choose to register with us</description>
    <inlineHelpText>record the reason the candidate choose to register with us</inlineHelpText>
    <label>Reason for Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2nd Tier Candidate Submission</fullName>
            </value>
            <value>
                <fullName>An Employer</fullName>
            </value>
            <value>
                <fullName>Blue Arrow branch</fullName>
            </value>
            <value>
                <fullName>An employee</fullName>
                <label>Blue Arrow employee</label>
            </value>
            <value>
                <fullName>Blue Arrow Sourcing Centre</fullName>
            </value>
            <value>
                <fullName>Blue Arrow van</fullName>
                <isActive>false</isActive>
                <label>Blue Arrow van</label>
            </value>
            <value>
                <fullName>Blue Arrow website</fullName>
                <isActive>false</isActive>
                <label>Blue Arrow website</label>
            </value>
            <value>
                <fullName>Caterer CV Search</fullName>
            </value>
            <value>
                <fullName>Client website</fullName>
                <isActive>false</isActive>
                <label>Client website</label>
            </value>
            <value>
                <fullName>CV Library CV Search</fullName>
            </value>
            <value>
                <fullName>Education Provider</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Friend/Family</fullName>
            </value>
            <value>
                <fullName>Indeed CV Search</fullName>
            </value>
            <value>
                <fullName>Job board (e.g. Total Jobs, Caterer)</fullName>
                <isActive>false</isActive>
                <label>Job board (e.g. Total Jobs, Caterer)</label>
            </value>
            <value>
                <fullName>JobCentre Plus</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Local Event</fullName>
            </value>
            <value>
                <fullName>Newspaper Advert</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Poster</fullName>
                <isActive>false</isActive>
                <label>Poster</label>
            </value>
            <value>
                <fullName>Poster/Flyer</fullName>
            </value>
            <value>
                <fullName>Reed CV Search</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
                <isActive>false</isActive>
                <label>Social Media</label>
            </value>
            <value>
                <fullName>Text Message</fullName>
                <isActive>false</isActive>
                <label>Text Message</label>
            </value>
            <value>
                <fullName>Total Jobs CV Search</fullName>
                <isActive>false</isActive>
                <label>Total Jobs CV Search</label>
            </value>
            <value>
                <fullName>Trade Membership</fullName>
                <isActive>false</isActive>
                <label>Trade Membership</label>
            </value>
            <value>
                <fullName>TRC Uploaded Candidate</fullName>
                <isActive>false</isActive>
                <label>TRC Uploaded Candidate</label>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>Work Colleague</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>