Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Reference_count__c.field-meta.xml
<CustomField>
    <fullName>IP_Reference_count__c</fullName>
    <label>Reference count</label>
    <summaryForeignKey>ts2__Reference__c.ts2__Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>