Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Region__c.field-meta.xml
<CustomField>
    <fullName>IP_Region__c</fullName>
    <formula>TEXT(Owner.IP_Region__c)</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>