Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Regional_Area__c.field-meta.xml
<CustomField>
    <fullName>IP_Regional_Area__c</fullName>
    <formula>TEXT(Owner.IP_Regional_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional Area</label>
    <type>Text</type>
</CustomField>