Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Rehabilitation_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Rehabilitation_Period_End_Date__c</fullName>
    <label>Rehabilitation Period End Date</label>
    <type>Date</type>
</CustomField>