Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_SMS__c.field-meta.xml
<CustomField>
    <fullName>IP_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>