Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_StudentLoan__c.field-meta.xml
<CustomField>
    <fullName>IP_StudentLoan__c</fullName>
    <label>Student Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>