Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_StudentWorkHours__c.field-meta.xml
<CustomField>
    <fullName>IP_StudentWorkHours__c</fullName>
    <inlineHelpText>Select the number of work hours the student is restricted to in term time</inlineHelpText>
    <label>Student Work Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <default>true</default>
                <label>10</label>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>