Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_StudyComplete__c.field-meta.xml
<CustomField>
    <fullName>IP_StudyComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if student has completed their course</inlineHelpText>
    <label>Study Complete</label>
    <type>Checkbox</type>
</CustomField>