Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_TempestDepartment__c.field-meta.xml
<CustomField>
    <fullName>IP_TempestDepartment__c</fullName>
    <formula>TEXT(Owner.IP_TempestDepartment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Cost Code</label>
    <type>Text</type>
</CustomField>