Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_TempestDivision__c.field-meta.xml
<CustomField>
    <fullName>IP_TempestDivision__c</fullName>
    <formula>TEXT(Owner.IP_TempestDivision__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempest Division</label>
    <type>Text</type>
</CustomField>