Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Term1EndDate__c.field-meta.xml
<CustomField>
    <fullName>IP_Term1EndDate__c</fullName>
    <description>Only complete for international students</description>
    <inlineHelpText>Only complete for international students</inlineHelpText>
    <label>Term 1 End Date</label>
    <type>Date</type>
</CustomField>