Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Term1StartDate__c.field-meta.xml
<CustomField>
    <fullName>IP_Term1StartDate__c</fullName>
    <description>Used for international students with via restrictions</description>
    <inlineHelpText>only complete for international students</inlineHelpText>
    <label>Term 1 Start Date</label>
    <type>Date</type>
</CustomField>