Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Term2EndDate__c.field-meta.xml
<CustomField>
    <fullName>IP_Term2EndDate__c</fullName>
    <description>International student term detail</description>
    <inlineHelpText>Only complete for International students</inlineHelpText>
    <label>Term 2 End Date</label>
    <type>Date</type>
</CustomField>