Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_ThirdPartyID__c.field-meta.xml
<CustomField>
    <fullName>IP_ThirdPartyID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Clock number etc,</inlineHelpText>
    <label>Third Party ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>