Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_TimesheetIDLink__c.field-meta.xml
<CustomField>
    <fullName>IP_TimesheetIDLink__c</fullName>
    <label>Timesheet ID Link</label>
    <length>18</length>
    <type>Text</type>
</CustomField>