Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Tupe_In__c.field-meta.xml
<CustomField>
    <fullName>IP_Tupe_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tupe In</label>
    <type>Checkbox</type>
</CustomField>