Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_UmbCount__c.field-meta.xml
<CustomField>
    <fullName>IP_UmbCount__c</fullName>
    <label>Umbrella pay profile count</label>
    <summaryFilterItems>
        <field>IP_PayProfile__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Umbrella</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>IP_PayProfile__c.IP_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>IP_PayProfile__c.IP_OkToSupply__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>IP_PayProfile__c.IP_Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>