Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Unspent_Criminal_Convictions__c.field-meta.xml
<CustomField>
    <fullName>IP_Unspent_Criminal_Convictions__c</fullName>
    <label>Unspent Criminal Convictions</label>
    <length>10</length>
    <type>Text</type>
</CustomField>