Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_Unspent_Criminal_Convictions_Details__c.field-meta.xml
<CustomField>
    <fullName>IP_Unspent_Criminal_Convictions_Details__c</fullName>
    <label>Date of Offence</label>
    <type>Date</type>
</CustomField>