Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_WorkerLeavingDate__c.field-meta.xml
<CustomField>
    <fullName>IP_WorkerLeavingDate__c</fullName>
    <inlineHelpText>Date the worker wants to leave, must be greater than today unless auto P45</inlineHelpText>
    <label>P45 Requested Date</label>
    <type>Date</type>
</CustomField>