Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/IP_WorkerStartDate__c.field-meta.xml
<CustomField>
    <fullName>IP_WorkerStartDate__c</fullName>
    <description>Date of the workers first paid work for the Agency</description>
    <inlineHelpText>Worker Start Date which is the first day of their first shift.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>