Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/iPad_reg_form_completed__c.field-meta.xml
<CustomField>
    <fullName>iPad_reg_form_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iPad reg form completed</label>
    <type>Checkbox</type>
</CustomField>