Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/jsinq__Convert_Contact__c.field-meta.xml
<CustomField>
    <fullName>jsinq__Convert_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert Contact</label>
    <type>Checkbox</type>
</CustomField>