Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/JSO2__Active_Accomodation_File__c.field-meta.xml
<CustomField>
    <fullName>JSO2__Active_Accomodation_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the accomodation file id for the active record associated with this employee</inlineHelpText>
    <label>Active Accomodation File</label>
    <referenceTo>JSO2__Accomodation__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>