Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/JSO2__Active_Benefits_File__c.field-meta.xml
<CustomField>
    <fullName>JSO2__Active_Benefits_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Benefits Enrollment currently active with this employee.</inlineHelpText>
    <label>Active Benefits File</label>
    <referenceTo>JSO2__Benefits__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>