Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/JSO2__Active_Consents_File__c.field-meta.xml
<CustomField>
    <fullName>JSO2__Active_Consents_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the consent file currently associated with the Employee in the current employment status.</inlineHelpText>
    <label>Active Consents File</label>
    <referenceTo>JSO2__Consents__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>