Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/JSO2__Active_Direct_Deposit_File__c.field-meta.xml
<CustomField>
    <fullName>JSO2__Active_Direct_Deposit_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Direct Deposit information that is currently active and associated with this employee.</inlineHelpText>
    <label>Active Direct Deposit File</label>
    <referenceTo>JSO2__Direct_Deposit__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>