Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/JSO2__Active_Driver_File__c.field-meta.xml
<CustomField>
    <fullName>JSO2__Active_Driver_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the active primary driver license record for this employee</inlineHelpText>
    <label>Active Driver File</label>
    <referenceTo>JSO2__Driver_s_License__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>