Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/JSO2__Active_EEO_File__c.field-meta.xml
<CustomField>
    <fullName>JSO2__Active_EEO_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the current active EEo record for this employee</inlineHelpText>
    <label>Active EEO File</label>
    <referenceTo>JSO2__EEO__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>