Frankbelford/uatv1ba/force-app/main/default/objects/Contact/fields/JSO2__Active_Emergency_File__c.field-meta.xml
<CustomField>
    <fullName>JSO2__Active_Emergency_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the emergency contact file that is currently active for this contact.</inlineHelpText>
    <label>Active Emergency File</label>
    <referenceTo>JSO2__Emergency_Contact__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>